--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :user_id %>
+    <%= form.collection_select :user_id, User.order(:id), :id, :email, include_blank: true %>
+  </div>
+
+  <div class="field">
     <%= form.label :loan_type_id %>
     <%= form.collection_select :loan_type_id, LoanType.order(:short_name), :id, :short_name, include_blank: true %>
   </div>
