--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -2,11 +2,12 @@
 
 <h1>Loans</h1>
 
-<table>
-  <thead>
+<table class="table table-striped table-hover">
+  <thead class="thead-dark">
     <tr>
-      <th>Moneylender</th>
+      <th></th>
       <th>Status</th>
+      <th>User</th>
       <th>Loan type</th>
       <th>Amount borrowed</th>
       <th>Balance</th>
@@ -21,9 +22,10 @@
   <tbody>
     <% @loans.each do |loan| %>
       <tr>
-        <td><%= loan.moneylender_id %></td>
-        <td><%= loan.status_id %></td>
-        <td><%= loan.loan_type_id %></td>
+        <td><%= loan.moneylender.alias %></td>
+        <td><%= loan.status.name %></td>
+        <td><%= loan.user.email %></td>
+        <td><%= loan.loan_type.short_name %></td>
         <td><%= loan.amount_borrowed %></td>
         <td><%= loan.balance %></td>
         <td><%= loan.loan_date %></td>
