Move crontolers to admin, create the dashboard page to root, make admin role

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,9 +2,9 @@
 <p>Find me in app/views/admin/index.html.erb</p>
 
 
-<%= link_to 'Loans', loans_path %>
-<%= link_to 'Payments', payments_path %>
-<%= link_to 'Moneylenders', moneylenders_path %>
-<%= link_to 'Loan types', loan_types_path %>
-<%= link_to 'Statuses', statuses_path %>
-<%= link_to 'Extra fees', extra_fees_path %>
+<%= link_to 'Loans', admin_loans_path %>
+<%= link_to 'Payments', admin_payments_path %>
+<%= link_to 'Moneylenders', admin_moneylenders_path %>
+<%= link_to 'Loan types', admin_loan_types_path %>
+<%= link_to 'Statuses', admin_statuses_path %>
+<%= link_to 'Extra fees', admin_extra_fees_path %>
