--- a/app/views/admin/loans/show.html.erb
+++ b/app/views/admin/loans/show.html.erb
@@ -50,5 +50,5 @@
   <%= @loan.next_amount_payment %>
 </p>
 
-<%= link_to 'Edit', edit_loan_path(@loan) %> |
-<%= link_to 'Back', loans_path %>
+<%= link_to 'Edit', edit_admin_loan_path(@loan) %> |
+<%= link_to 'Back', admin_loans_path %>
