--- a/app/views/admin/payments/index.html.erb
+++ b/app/views/admin/payments/index.html.erb
@@ -18,15 +18,15 @@
   <tbody>
     <% @payments.each do |payment| %>
       <tr>
-        <td><%= payment.loan_id %></td>
+        <td><%= payment.loan.code %></td>
         <td><%= payment.amount %></td>
         <td><%= payment.payment_date %></td>
         <td><%= payment.profit %></td>
         <td><%= payment.payment_to_borrowed %></td>
-        <td><%= payment.status_id %></td>
-        <td><%= link_to 'Show', payment %></td>
-        <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
-        <td><%= link_to 'Destroy', payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= payment.status.name %></td>
+        <td><%= link_to 'Show', admin_payment_path(payment) %></td>
+        <td><%= link_to 'Edit', edit_admin_payment_path(payment) %></td>
+        <td><%= link_to 'Destroy', admin_payments_path(payment), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Payment', new_payment_path %>
+<%= link_to 'New Payment', new_admin_payment_path %>
