--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,26 @@
 
   <body>
     <div class="container-fluid">
-    <%= link_to 'Home', admin_path %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= link_to 'Home', root_path %>
+    <%= link_to 'Admin', admin_index_path if user_signed_in? && current_user.admin? %>
+    
+    <p class="navbar-text float-right">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Salir", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+      <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+    </p>
 
-    <div>
-      <% if signed_in? %>
-        <%= link_to "Salir", destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to "Registrarse", new_user_registration_path %>
-        <%= link_to "Ingresar", new_user_session_path %>
-      <% end %>
-    </div>
-
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </div>
   </body>
