--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,56 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
     <div class="container-fluid">
-    <%= link_to 'Home', root_path %>
-    <%= link_to 'Admin', admin_index_path if user_signed_in? && current_user.admin? %>
     
-    <p class="navbar-text float-right">
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Salir", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-      <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
-      <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
-    <% end %>
-    </p>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="<%=root_path%>">PagaML&bull;</a>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="<%=root_path%>">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <% if user_signed_in? && current_user.admin? %>
+          <li class="nav-item">
+            <%= link_to 'Admin', admin_index_path, :class => 'nav-link'%>
+          </li>
+          <% end %>
+
+          <% if user_signed_in? && current_user.monylender? %>
+          <li class="nav-item">
+            <%= link_to 'Creditors', creditors_path, :class => 'nav-link'%>
+          </li>
+          <% end %>
+          
+        </ul>
+        
+        <p class="navbar-text float-right">
+        <% if user_signed_in? %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to "Salir", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <% else %>
+          <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
+          <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
+        <% end %>
+        </p>
+      </div>
+
+    </nav>
+
+
+     
 
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
