--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_with(model: [@loan, @payment], local: true) do |form| %>
   <% if payment.errors.any? %>
     <div id="error_explanation">
@@ -11,38 +13,40 @@
     </div>
   <% end %>
 
-  <div class="field form-group">
-    <%= form.label :loan_id %>
-    <%= @loan.code %>
+  <h3><%= @loan.code %></h3>
+
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <%= form.label :amount %>
+      <%= form.text_field :amount, :value=> @loan.next_amount_payment.round(2), :class=>"form-control" %>
+    </div>
+
+    <div class="form-group col-md-6">
+      <%= form.label :payment_date %>
+      <% form.date_select :payment_date,{}, {:class=>"form-control"} %>
+      <%= form.text_field :payment_date, :value=> Date.today, :class=>"form-control datepicker" %>
+    </div>
   </div>
 
-  <div class="field form-group">
-    <%= form.label :amount %>
-    <%= form.text_field :amount, :value=> @loan.next_amount_payment.round(2), :class=>"form-control" %>
-  </div>
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <%= form.label :profit %>
+      <%= form.text_field :profit, :value=> @loan.recal_profit( @loan.next_amount_payment ).round(2), :class=>"form-control-sm" %>
+    </div>
 
-  <div class="field form-group">
-    <%= form.label :payment_date %>
-    <%= form.date_select :payment_date,{}, {:class=>"form-control"} %>
-    <%= form.text_field :payment_date, :class=>"form-control datepicker" %>
-  </div>
+    <div class="form-group  col-md-4">
+      <%= form.label :payment_to_borrowed %>
+      <%= form.text_field :payment_to_borrowed, :value=> @loan.recal_payment_to_borroewd( @loan.next_amount_payment ).round(2), :class=>"form-control-sm" %>
+    </div>
 
-  <div class="field form-group">
-    <%= form.label :profit %>
-    <%= form.text_field :profit, :value=> @loan.recal_profit( @loan.next_amount_payment ).round(2), :class=>"form-control" %>
-  </div>
-
-  <div class="field form-group">
-    <%= form.label :payment_to_borrowed %>
-    <%= form.text_field :payment_to_borrowed, :value=> @loan.recal_payment_to_borroewd( @loan.next_amount_payment ).round(2), :class=>"form-control" %>
-  </div>
-
-  <div class="field form-group">
-    <%= form.label :status_id %>
-    <%= form.collection_select :status_id, Status.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control"} %>
+    <div class="form-group col-md-4">
+      <%= form.label :status_id %>
+      <%= form.collection_select :status_id, Status.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control-sm"} %>
+    </div>
   </div>
 
   <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
+<%= javascript_pack_tag 'payment' %>
