--- a/app/views/admin/loans/_form.html.erb
+++ b/app/views/admin/loans/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @loan, url: admin_loans_path, local: true) do |form| %>
+<%= form_with(model: @loan, url: admin_loan_path, local: true) do |form| %>
   <% if loan.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(loan.errors.count, "error") %> prohibited this loan from being saved:</h2>
