--- a/app/views/admin/loan_types/_form.html.erb
+++ b/app/views/admin/loan_types/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: loan_type, url: admin_loan_types_path, local: true) do |form| %>
+<%= form_with(model: loan_type, url: admin_loan_type_path, local: true) do |form| %>
   <% if loan_type.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(loan_type.errors.count, "error") %> prohibited this loan_type from being saved:</h2>
