--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -15,38 +15,40 @@
 
   <h3><%= @loan.code %></h3>
 
-  <div class="form-row">
-    <div class="form-group col-md-6">
+  <div class="row">
+    <div class="form-group col-6">
       <%= form.label :amount %>
       <%= form.text_field :amount, :value=> @loan.next_amount_payment.round(2), :class=>"form-control" %>
     </div>
 
-    <div class="form-group col-md-6">
+    <div class="form-group col-6">
       <%= form.label :payment_date %>
       <% form.date_select :payment_date,{}, {:class=>"form-control"} %>
       <%= form.text_field :payment_date, :value=> Date.today, :class=>"form-control datepicker" %>
     </div>
   </div>
 
-  <div class="form-row">
-    <div class="form-group col-md-4">
+  <div class="row">
+    <div class="form-group col-6">
       <%= form.label :profit %>
       <%= form.text_field :profit, :value=> @loan.recal_profit( @loan.next_amount_payment ).round(2), :class=>"form-control-sm" %>
     </div>
 
-    <div class="form-group  col-md-4">
+    <div class="form-group  col-6">
       <%= form.label :payment_to_borrowed %>
       <%= form.text_field :payment_to_borrowed, :value=> @loan.recal_payment_to_borroewd( @loan.next_amount_payment ).round(2), :class=>"form-control-sm" %>
     </div>
-
-    <div class="form-group col-md-4">
+  </div>
+  <div class="row">
+    <div class="form-group col-12">
       <%= form.label :status_id %>
       <%= form.collection_select :status_id, Status.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control-sm"} %>
     </div>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <%= form.submit nil, class: 'btn btn-success' %>
   </div>
 <% end %>
 <%= javascript_pack_tag 'payment' %>
