--- a/app/views/creditors/show.html.erb
+++ b/app/views/creditors/show.html.erb
@@ -40,7 +40,7 @@
       <h6 class="col-2"><%=number_to_currency(@moneylender.loan.sum{ |l| l.payments.sum(:profit) })%></h6>
       <h6 class="col-4">Acount number:<%=@moneylender.account_number%><h6>
     </div>
-    <a href="<%=new_loan_path%>" class="btn btn-primary">Add new Loan</a>
+    <a href="/creditors/new_loan/<%=@moneylender.id%>" class="btn btn-primary">Add new Loan</a>
   </div>
 </div>
 
