--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @loan, url: admin_loans_path, local: true) do |form| %>
+<%= form_with(model: @loan, url: loans_path, local: true) do |form| %>
   <% if loan.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(loan.errors.count, "error") %> prohibited this loan from being saved:</h2>
@@ -11,57 +11,56 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :moneylender_id %>
-    <%= form.collection_select :moneylender_id, Moneylender.order(:alias), :id, :alias, include_blank: true %>
+  <div class="row">
+    <div class="form-group col-4">
+      <%= form.label :moneylender_id %>
+      <%= form.collection_select :moneylender_id, Moneylender.order(:alias), :id, :alias, {include_blank: false}, {:class=>"form-control"} %>
+    </div>
+
+    <div class="form-group col-4">
+      <%= form.label :status_id %>
+      <%= form.collection_select :status_id, Status.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control"} %>
+    </div>
+
+    <div class="form-group col-4">
+      <%= form.label :amount_borrowed %>
+      <%= form.text_field :amount_borrowed, :class=>"form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :status_id %>
-    <%= form.collection_select :status_id, Status.order(:id), :id, :name, include_blank: true %>
+  <div class="row">
+    <div class="form-group col-4">
+      <%= form.label :loan_type_id %>
+      <%= form.collection_select :loan_type_id, LoanType.order(:short_name), :id, :short_name, {include_blank: false}, {:class=>"form-control"} %>
+    </div>
+
+    <div class="form-group col-4">
+      <%= form.label :user_id %>
+      <%= form.collection_select :user_id, User.order(:id), :id, :email, {include_blank: false}, {:class=>"form-control"} %>
+    </div>
+
+    
   </div>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.collection_select :user_id, User.order(:id), :id, :email, include_blank: false %>
+  <div class="row">
+    <div class="form-group col-4">
+      <%= form.label :loan_date %>
+      <% form.date_select :loan_date %>
+      <%= form.text_field :loan_date, :value=> Date.today, :class=>"form-control datepicker" %>
+    </div>
+
+    <div class="form-group col-4">
+      <%= form.label :start_date %>
+      <% form.date_select :start_date %>
+      <%= form.text_field :start_date, :value=> Date.today, :class=>"form-control datepicker" %>
+    </div>
+
   </div>
 
-  <div class="field">
-    <%= form.label :loan_type_id %>
-    <%= form.collection_select :loan_type_id, LoanType.order(:short_name), :id, :short_name, include_blank: true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :amount_borrowed %>
-    <%= form.text_field :amount_borrowed %>
-  </div>
-
-  <div class="field">
-    <%= form.label :balance %>
-    <%= form.text_field :balance %>
-  </div>
-
-  <div class="field">
-    <%= form.label :loan_date %>
-    <%= form.date_select :loan_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :start_date %>
-    <%= form.date_select :start_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :next_payment_date %>
-    <%= form.date_select :next_payment_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :next_amount_payment %>
-    <%= form.text_field :next_amount_payment %>
-  </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= link_to 'Cancel', creditor_path(@loan.moneylender_id), class: 'btn btn-secondary' %>
+    
+    <%= form.submit nil, class: 'btn btn-success' %>
   </div>
 <% end %>
