--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Loan</h1>
 
-<%= render 'form', loan: @loan %>
+<%= render 'loans/form', loan: @loan %>
 
 <%= link_to 'Back', admin_loans_path %>
