--- a/app/views/creditors/show.html.erb
+++ b/app/views/creditors/show.html.erb
@@ -2,22 +2,22 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.22/datatables.min.css"/>
 
 <div class="btn-group" role="group">
- <button type="button" class="btn btn-danger">
+ <button id="searchDelayed" type="button" class="btn btn-danger">
   Retrazados <span class="badge badge-light"><%=@moneylender.loans_delayed%></span>
   <span class="sr-only">Prestamos retrazados</span>
  </button>
 
- <button type="button" class="btn btn-primary">
+ <button id="searchAware" type="button" class="btn btn-primary">
   Al corriente <span class="badge badge-light"><%=@moneylender.loans_ok%></span>
   <span class="sr-only">Prestamos al corriente</span>
  </button>
 
- <button type="button" class="btn btn-success">
+ <button id="searchPaied" type="button" class="btn btn-success">
   Pagados <span class="badge badge-light"><%=@moneylender.loans_paied%></span>
   <span class="sr-only">Prestamos pagados</span>
  </button>
 
- <button type="button" class="btn btn-secondary">
+ <button id="searchClosed" type="button" class="btn btn-secondary">
   Cerrados <span class="badge badge-light"><%=@moneylender.loans_closed%></span>
   <span class="sr-only">Prestamos Cerrados</span>
  </button>
@@ -68,7 +68,10 @@
           <%="class=table-primary" if loan.ok? %>
           <%="class=table-secondary" if loan.closed? %> >
         <th scope="row"><%= link_to loan.code, loan_path(loan) %> </th>
-        <td><%= loan.status.name %></td>
+        <td><%= loan.status.name %><br/><small>
+          <%="delayed" if loan.delayed? %>
+          <%="aware" if loan.ok? %> 
+          </small></td>
         <td><%= loan.user.complete_name %></td>
         <td><%= loan.loan_type.short_name %></td>
         <td><%= number_to_currency(loan.amount_borrowed) %></td>
