--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -16,39 +16,39 @@
   <h3><%= @loan.code %></h3>
 
   <div class="row">
-    <div class="form-group col-6">
+    <div class="form-group col-md">
       <%= form.label :amount %>
-      <%= form.text_field :amount, :value=> @loan.next_amount_payment.round(2), :class=>"form-control" %>
+      <%= form.text_field :amount, :class=>"form-control" %>
     </div>
 
-    <div class="form-group col-6">
+    <div class="form-group col-md">
       <%= form.label :payment_date %>
       <% form.date_select :payment_date,{}, {:class=>"form-control"} %>
-      <%= form.text_field :payment_date, :value=> Date.today, :class=>"form-control datepicker" %>
+      <%= form.text_field :payment_date, :class=>"form-control datepicker" %>
     </div>
   </div>
 
   <div class="row">
-    <div class="form-group col-6">
+    <div class="form-group col-md">
       <%= form.label :profit %>
-      <%= form.text_field :profit, :value=> @loan.recal_profit( @loan.next_amount_payment ).round(2), :class=>"form-control-sm" %>
+      <%= form.text_field :profit, :class=>"form-control-sm" %>
     </div>
 
-    <div class="form-group  col-6">
+    <div class="form-group  col-md">
       <%= form.label :payment_to_borrowed %>
-      <%= form.text_field :payment_to_borrowed, :value=> @loan.recal_payment_to_borroewd( @loan.next_amount_payment ).round(2), :class=>"form-control-sm" %>
+      <%= form.text_field :payment_to_borrowed, :class=>"form-control-sm" %>
     </div>
   </div>
   <div class="row">
-    <div class="form-group col-12">
+    <div class="form-group col-md">
       <%= form.label :status_id %>
       <%= form.collection_select :status_id, Status.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control-sm"} %>
     </div>
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <!--button href="<%=backpath %>" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button-->
+    <%= link_to 'Cancel', backpath, class: "btn btn-secondary", data: { dismiss: "modal"} %>
     <%= form.submit nil, class: 'btn btn-success' %>
   </div>
 <% end %>
-<%= javascript_pack_tag 'payment' %>
