--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,20 +24,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="<%=root_path%>">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="<%=root_path%>"><%=t(:home)%> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
+            <a class="nav-link" href="#"><%=t(:help)%></a>
           </li>
           <% if user_signed_in? && current_user.admin? %>
           <li class="nav-item">
-            <%= link_to 'Admin', admin_index_path, :class => 'nav-link'%>
+            <%= link_to t(:admin), admin_index_path, :class => 'nav-link'%>
           </li>
           <% end %>
 
           <% if user_signed_in? && current_user.monylender? %>
           <li class="nav-item">
-            <%= link_to 'Creditors', creditors_path, :class => 'nav-link'%>
+            <%= link_to t(:creditors), creditors_path, :class => 'nav-link'%>
           </li>
           <% end %>
           
@@ -45,9 +45,9 @@
         
         <p class="navbar-text float-right">
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-          <%= link_to "Salir", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <strong><%= current_user.email %></strong>
+          <%= link_to t(:profile), edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to t(:salir), destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
         <% else %>
           <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
           <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
